# SunikiEngine

./: .gitignore  CMakeLists.txt
include/glad/: CMakeLists.txt
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
include/stb_image/: CMakeLists.txt
src/: CMakeLists.txt
src/engine/: engine.cpp
src/renderer/camera/: CMakeLists.txt  camera.cpp
src/renderer/shader/: CMakeLists.txt  shader.cpp  shader.hpp
